# googleMockTest

./: CMakeLists.txt  README.md  main.cpp
Shapes/: CMakeLists.txt  IShape.h  RatioCalculator.cpp  RatioCalculator.h  Rectangle.cpp  Rectangle.h
Shapes/Mock/: CMakeLists.txt  mock_Shape.h
